[Fix] Fix spacing below skills section
Add negative bottom margin to fight the bottom margin
introduced by .skill-group

--- a/static/styles/scss/main.scss
+++ b/static/styles/scss/main.scss
@@ -102,6 +102,11 @@ section {
     }
 }
 
+#skills {
+    //fight .skill-group margin-bottom
+    margin-bottom: -$space;
+}
+
 .skill-group {
     float: left;
     width: 100%;
